--- a/index.html
+++ b/index.html
@@ -3,88 +3,111 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+	<link rel="stylesheet" type="text/css" href="css/bass.css" >
+    <link rel="stylesheet" type="text/css" href="css/index.css" >
+    <title>猫儿的小窝</title>
+    <style>
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Hahacat.GitHub.io by hahacat</title>
+    </style>
+    <script src="javascripts/screensaver.js"></script>
+    <script>
+		function d2a(n){
+			return n*Math.PI/180;
+		}
+		function getStyle(obj,sName){
+            if(obj.currentStyle){
+                return obj.currentStyle[sName];
+            }else{
+                return getComputedStyle(obj,false)[sName];
+            }
+        }
+		document.addEventListener('DOMContentLoaded',function(){
+			
+		},false);
+		
+	</script>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/hahacat">View on GitHub</a>
-    <div class="shell">
-
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Hahacat.GitHub.io</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
-
-      <div id="no-downloads">
-        <span class="inner">
-        </span>
-      </div>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/hahacat">hahacat</a> can be found on <a href="https://github.com/hahacat">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
+	<canvas></canvas>
+    <div class="wrapper">
+   		<header class="w clearfix">
+        	<h1 class="fl"></h1>
+            <ul class="fr clearfix">
+            	<li class="fl li0"><a href="javascript:;">首页</a></li>
+                <li class="fl li1"><a href="javascript:;">曾经</a></li>
+                <li class="fl li2"><a href="javascript:;">爱自然</a></li>
+                <li class="fl li3"><a href="javascript:;">爱生活</a></li>
+                <li class="fl li4"><a href="javascript:;">爱动物</a></li>
+                <li class="fl li5"><a href="javascript:;">随笔</a></li>
+            </ul>
+            <ol class="clearfix">
+            	<li>index</li>
+                <li>ever</li>
+                <li>nature</li>
+                <li>life</li>
+                <li>animals</li>
+                <li>essay</li>
+            </ol>
+        </header>
+        <nav class="w">
+        	<ul>
+            	<li class="l2 fl"><a href="javascript:;"><img src="img/img1.jpg" /></a></li>
+                <li class="l1 fl"><a href="javascript:;"><img src="img/img5.jpg" /></a></li>
+                <li class="cur fl"><a href="javascript:;"><img src="img/img2.jpg" /></a></li>
+                <li class="r1 fl"><a href="javascript"><img src="img/img3.jpg" /></a></li>
+                <li class="r2 fl"><a href="javascript:;"><img src="img/img4.jpg" /></a></li>
+            </ul>
+            <ol>
+            	<li class="l2">曾经也是那么美好...</li>
+                <li class="l1">人应该更加亲近大自然...</li>
+                <li class="cur">享受美好的生活...</li>
+                <li class="r1">喜欢可爱的动物...</li>
+                <li class="r2">记录自己的点滴...</li>
+            </ol>
+        </nav>
+        <section class="w clearfix">
+        	<div class="clock fl">
+            	<span class="s"></span>
+                <span class="m"></span>
+                <span class="h"></span>
+                <span class="cap"></span>
+            </div>
+            <div id="music" class="clearfix">
+                <div class="left" >
+                    <div class="rotate" id="rotate"></div>
+                    <div class="rotate_d"><span class="start"></span></div>
+                </div>
+                <div class="right">
+                    <ul>
+                        <li>
+                            <h2><a href="javascript:;" >1111</a></h2>
+                            <div class="right_1 clearfix"><span>歌手：</span><a href="javascript:;" ></a><span class="span_1">专辑：</span><a href="javascript:;" ></a></div>
+                            <div class="right_2 clearfix" id="right_2">
+                                <span class="span_2"></span>	<!-- 小停止按键 -->
+                                <div class="meter"><span class="meter_s"></span><span class="bar"></span></div><!-- 进度条和进度块-->
+                                <time>00:00/00:00</time>	<!-- 总时间 -->
+                                <div class="volume"><em class="volume_switch"></em><div class="volume_meter"><span class="bar2"></span></div>	<!-- 声音控制 -->
+                                <div class="play"></div>	
+                            </div></div>
+                        </li>
+                    </ul>
+                    <audio src="0.mp3"></audio>
+                </div>
+        	</div>
+            <div class="fr link">
+            	<a href="http://www.cnblogs.com/xwwshr">我的博客园：<img src="img/1478829234.png" /></a>
+                <a href="javascript:;">我的微信号：<img src="img/psb (1).jpg" /></a>
+            </div>
+		</section>
+        <footer class="w clearfix">
+        	<span>学习网站：</span>
+        	<a href="http://www.w3school.com.cn/">W3school</a>
+            <a href="http://www.51zxw.net/">我要自学网</a>
+            <a href="http://www.ijavascript.cn/">js教程网</a>
+            <a href="http://www.qdfuns.com/">前端网</a>
+        </footer>
     </div>
-
-    
   </body>
 </html>
