--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         	<h1 class="fl"></h1>
             <ul class="fr clearfix">
             	<li class="fl li0"><a href="javascript:;">首页</a></li>
-                <li class="fl li1"><a href="ever.html">曾经</a></li>
+                <li class="fl li1"><a href="https://hahacat.github.io/ever.html">曾经</a></li>
                 <li class="fl li2"><a href="javascript:;">爱自然</a></li>
                 <li class="fl li3"><a href="javascript:;">爱生活</a></li>
                 <li class="fl li4"><a href="javascript:;">爱动物</a></li>
