--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <li class="r2 fl"><a href="javascript:;"><img src="img/img4.jpg" /></a></li>
             </ul>
             <ol>
-            	<li class="l2">曾经也是那么美好...</li>
+		    <li class="l2"><a href="https://hahacat.github.io/ever.html">曾经也是那么美好...</a></li>
                 <li class="l1">人应该更加亲近大自然...</li>
                 <li class="cur">享受美好的生活...</li>
                 <li class="r1">喜欢可爱的动物...</li>
