--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </ul>
             <ol class="clearfix">
             	<li>index</li>
-                <li>ever</li>
+                <li><a href="https://hahacat.github.io/ever.html">ever</a></li>
                 <li>nature</li>
                 <li>life</li>
                 <li>animals</li>
